# io.mo.glassmic

./: .gitignore  AGENTS.md  IMPORT_GUIDE.md  LICENSE  README.md  README_zh.md  build.gradle.kts  gradle.properties  settings.gradle.kts  test-file.txt
.github/workflows/: sync-release.yml  sync-to-repo.yml
app/: build.gradle.kts  proguard-rules.pro
app/src/main/: AndroidManifest.xml
app/src/main/assets/: xposed_init
app/src/main/java/io/mo/glassmic/: GlassApplication.kt  MainActivity.kt
app/src/main/java/io/mo/glassmic/audio/: AudioSourceProvider.kt  BufferedPcmSource.kt  FileAudioSource.kt  Pcm16Converter.kt  SharedPcmPublisher.kt  ShortRingBuffer.kt  TtsAudioSource.kt
app/src/main/java/io/mo/glassmic/di/: AppModule.kt
app/src/main/java/io/mo/glassmic/log/: GlassLog.kt
app/src/main/java/io/mo/glassmic/provider/: PcmStreamProvider.kt  ProviderGate.kt  RuntimeProvider.kt
app/src/main/java/io/mo/glassmic/service/: BootReceiver.kt  (+9 more)
app/src/main/proto/: app_config.proto
app/src/main/res/drawable/: ic_launcher_background.xml  ic_launcher_foreground.xml  ic_notification.xml
app/src/main/res/values/: arrays.xml  strings.xml  themes.xml
app/src/main/res/values-en/: strings.xml
app/src/main/res/values-night/: themes.xml
app/src/main/res/xml/: file_paths.xml
core/: build.gradle.kts
gradle/: libs.versions.toml
xposed/: build.gradle.kts  consumer-rules.pro
xposed/src/main/cpp/: CMakeLists.txt  glass_aaudio.cpp  glass_aaudio.h  glass_audiorecord.cpp  glass_audiorecord.h  glass_jni.cpp  glass_log.h  glass_opensl.cpp  glass_opensl.h
(+58 files in other folders)
